# agentdata-pro

./: .env.example  .gitignore  CONCEPT.md  alembic.ini  docker-compose.yml  init_schema.sql  pyproject.toml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/phases/01-foundation/: 01-01-PLAN.md  01-02-PLAN.md  01-03-PLAN.md  01-CONTEXT.md  01-RESEARCH.md  01-VALIDATION.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
api/: .dockerignore  Dockerfile  config.py  deps.py  main.py
api/agents/: __init__.py  base.py  models.py  registry.py  router.py  router_agent.py  scheduler.py  search_agent.py
api/agents/price_monitor/: __init__.py  (+3 more)
api/auth/: models.py  router.py  service.py  telegram.py  webhook.py
api/chat/: history.py  models.py  router.py  service.py
api/db/: init_schema.sql  pool.py
api/documents/: context.py  models.py  parser.py  parser.py.bak  parser.py.bak2  router.py  service.py
api/health/: data_fetcher.py  fact_extractor.py  profile_builder.py  query_classifier.py
api/llm/: client.py  gigachat.py  streaming.py
api/middleware/: auth.py  rls.py
artifacts/: BACKLOG_MASTER.md  CURRENT_STATE.md  PROJECT_BRIEF.md  ROUND1_PLAN.md  ROUND2_PLAN.md  ROUND_NGINX_PLAN.md  ROUND_POSTGRES_HOST_PLAN.md  architecture.md  qa-report.md  requirements.md  review-report.md  security-report.md
deploy/nginx/: default.conf
prompts/: health_advisor.md
scripts/: migrate_biomarkers.py
web/: index.html  nginx.conf  package-lock.json  package.json
web/src/: App.tsx  index.css
(+35 files in other folders)
